--- a/www/style.css
+++ b/www/style.css
@@ -1,5 +1,8 @@
-
+body {
+  background: #f0f0f0;
+}
 .abscenter {
+  background: #ffffff;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
