--- a/www/style.css
+++ b/www/style.css
@@ -13,6 +13,16 @@ body {
     border-color: rgb(212, 63, 58);
 }
 
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+    color: white;
+    background-color: #D2322D;
+    border-color: #AC2925;
+}
+
 .page-header {
     border-bottom: 1px solid rgb(153, 153, 153);
 }
